Merge from 0_7_X
git-svn-id: https://svn.apache.org/repos/asf/incubator/syncope/trunk@1247278 13f79535-47bb-0310-9956-ffa450edef68